fix menu open white links not visible

--- a/wp-content/themes/wp-shield/static/assets/_src/scss/components/_menu.scss
+++ b/wp-content/themes/wp-shield/static/assets/_src/scss/components/_menu.scss
@@ -198,6 +198,10 @@ Menu
   }
 }
 
+body.eit-non-blocks..menu-open.page-template-hero-secondary.theme-tenadams nav.header__nav a {
+  color: $c-offblack !important;
+}
+
 .eit-non-blocks .menu__search {
   background: none;
   border: 0;
